[package]
name = "iron-sight"
version = "0.1.0"
edition = "2021"
description = "A terminal CSV viewer with vim-style navigation"
license = "MIT"
repository = "https://github.com/spolla-l/iron-sight"
rust-version = "1.75"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
polars = { version = "0.46", features = ["csv", "parquet", "lazy", "strings", "regex"] }
