[package]
name = "iron-sight"
version = "0.3.0"
edition = "2021"
description = "A terminal CSV/Parquet viewer with vim-style navigation and plotting"
license = "MIT"
repository = "https://github.com/Spollal/iron-sight"
rust-version = "1.75"
keywords = ["csv", "parquet", "tui", "terminal", "viewer"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
polars = { version = "0.46", features = ["csv", "parquet", "lazy", "strings", "regex"] }
catppuccin = "2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
